fix: footer social icons alignment

--- a/apps/site/assets/css/export-headerfooter.scss
+++ b/apps/site/assets/css/export-headerfooter.scss
@@ -15,6 +15,11 @@
   }
 }
 
+.m-footer .c-social [class*=fa-] {
+  line-height: 1.5;
+  top: 0;
+}
+
 @import "functions";
 @import "variables";
 @import "mixins";
